# verilogAST-cpp

./: .dir-locals.el  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: verilogAST.hpp
include/verilogAST/: assign_inliner.hpp  concat_coalescer.hpp  make_packed.hpp  transformer.hpp  zext_coalescer.hpp
release/: Makefile
src/: assign_inliner.cpp  concat_coalescer.cpp  make_packed.cpp  transformer.cpp  verilogAST.cpp  zext_coalescer.cpp
tests/: assign_inliner.cpp  basic.cpp  common.cpp  concat_coalescer.cpp  make_packed.cpp  parameterized_module.cpp  transformer.cpp  zext_coalescer.cpp
